public/scss/common/global.scss
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica", "Arial", sans-serif;
}

body[dir="rtl"] {
  font-family: "Tahoma", sans-serif;
}

html, body {
  height: 100%;
}

* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

a {
  text-decoration: none;
  color: #003DC6;
}

a:hover {
  text-decoration: underline;
}

a:active {
  color: rgba(0, 61, 198, 0.4);
}

.g-hidden {
  display: none;
}

